--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -65,8 +65,8 @@ jobs:
       #     curl -f http://my-app-endpoint/health || exit 1
 
       # Step 7: Rollback on failure
-      - name: Rollback on failure
-        if: failure()
-        run: |
-          echo "Integration tests failed. Rolling back..."
-          aws ecs update-service --cluster ${{ secrets.ECS_CLUSTER }} --service ${{ secrets.ECS_SERVICE }} --force-new-deployment
+      # - name: Rollback on failure
+      #   if: failure()
+      #   run: |
+      #     echo "Integration tests failed. Rolling back..."
+      #     aws ecs update-service --cluster ${{ secrets.ECS_CLUSTER }} --service ${{ secrets.ECS_SERVICE }} --force-new-deployment
