--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.ECR_REPOSITORY }}
           echo "ecr_uri=${{ secrets.ECR_REPOSITORY }}" >> $GITHUB_STATE
-        uses: aws-actions/amazon-ecr-login@v1
+        # uses: aws-actions/amazon-ecr-login@v1
         with:
           region: ${{ secrets.AWS_REGION }}
 
