--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -33,12 +33,10 @@ jobs:
 
       # Step 3: Log in to Amazon ECR
       - name: Log in to Amazon ECR
-        run: |
-          aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.ECR_REPOSITORY }}
-          echo "ecr_uri=${{ secrets.ECR_REPOSITORY }}" >> $GITHUB_STATE
-        # uses: aws-actions/amazon-ecr-login@v1
-        # with:
-        #   region: ${{ secrets.AWS_REGION }}
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
+        with:
+         region: ${{ secrets.AWS_REGION }}
 
       # Step 4: Build and push Docker image to ECR
       - name: Build and push Docker image
